# cloudquery-cookiecutter

./: README.md  automate.py  automation_script.py
cookiecutter_template/: README.md  main.py
cookiecutter_template/plugin/: __init__.py  plugin.py
cookiecutter_template/plugin/client/: client.py  {{cookiecutter.plugin_name}}.py
cookiecutter_template/plugin/oapi/: __init__.py
cookiecutter_template/plugin/tables/: __init__.py  example-record_type.py  oapi_items.py
cookiecutter_template/tests/: PLACEHOLDER.md
plugin_template/: __init__.py  main.py  plugin.py  requirements_poetry.txt
{{cookiecutter.plugin_name}}/: Dockerfile  Makefile  TestConfig.yaml  pyproject.toml
{{cookiecutter.plugin_name}}/plugin/: __init__.py
{{cookiecutter.plugin_name}}/plugin/client/: __init__.py
{{cookiecutter.plugin_name}}/plugin/oapi/: loader.py  oapi.json
{{cookiecutter.plugin_name}}/plugin/tables/: __init__.py
